...
                android:text="@string/create_task_label"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <EditText
                android:id="@+id/taskEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/create_task_edit_text_margin"
                android:layout_marginTop="@dimen/create_task_edit_text_margin"
                android:layout_marginEnd="@dimen/create_task_edit_text_margin"
                android:hint="@string/create_task_edit_text_hint"
                android:text="@={viewmodel.task}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/taskLabel" />

        <Button
                android:id="@+id/createTaskButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/create_task_button_margin_top"
                android:text="@string/create_task_button_text"
                android:onClick="@{() -> viewmodel.onCreateNewTaskCreated()}"
                app:layout_constraintEnd_toEndOf="parent"
...
